syntax = "proto3";

package socialwallet;

option go_package = "github.com/yourname/social-wallet/api/proto/gen;proto";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

service TerminalService {
  rpc ActivateVoucher(ActivateVoucherRequest) returns (ActivateVoucherResponse) {
    option (google.api.http) = {
      get: "/activate-voucher"
    };
  }
  rpc HandleZKBioAttendance (ZKEventRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/api/social-wallet/zkbio"
      body: "*"
    };
  }
}

message ActivateVoucherRequest {
  string iin = 1 [json_name = "iin"];
  string school_bin = 2 [json_name = "school_bin"];
  string set_socpay = 3 [json_name = "set_socpay"];
  optional string reset_socpay = 4;
}

message ActivateVoucherResponse {
  string result = 1;
  string exist = 2;
  optional string warning = 3;
  optional string warn_comment = 4;
  string social_payments = 5;
  string card_number = 6;
}




message ZKBioEvent {
  string pin = 1;
  string devSn = 2;
  string readerName = 3;
  string doorName = 4;
  string eventTime = 5;
}

message HandleResponse {
  bool success = 1;
  string message = 2;
}
message ZKEventRequest {
  string module = 1;
  string dataType = 2;
  string moduleName = 3;
  string content = 4; 
  string pushType = 5;
  string pushTypeName = 6;
}
